trunk/Archive2/e5/69d35a86baa68b/output
main.cpp:1:1: error: 'List' does not name a type
 List List::operator +(List& list){
 ^
